Implementing all the missing resources